# JSieve

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
jsieve/: __init__.py  main.py
