[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsieve"
version = "0.1.0"
authors = [
    {name = "M. Murat Ardag"},
]
description = "JavaScript Extractor & Enumerator for web security analysis"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["javascript", "web security", "enumeration", "reconnaissance", "bug bounty", "penetration testing"]
dependencies = [
    "requests",
    "beautifulsoup4",
    "colorama",
    "tqdm",
    "lxml",
]

[project.urls]
"Homepage" = "https://github.com/mmuratardag/JSieve"
"Bug Tracker" = "https://github.com/mmuratardag/JSieve/issues"
"Documentation" = "https://mmuratardag.github.io/JSieve"

[project.scripts]
jsieve = "jsieve.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jsieve*"]

[tool.setuptools.package-data]
"*" = ["wordlists/*.txt"]